# lava-cli

./: Cargo.toml  Escrow2024.json  Makefile  TBW2023.json  blah.js  lava.yaml  test.mocha.js  test.mocha.ts
crates/lava_cli/: Cargo.toml
crates/lava_cli/src/: main.rs
crates/lava_core/: Cargo.toml
crates/lava_core/src/: lava_config.rs  lib.rs  seeds.rs
src/: main.rs  parser.rs
workspaces_examples/: Dice-Initialize.json  Escrow2024-Make-and-Take.json
