[workspace]
members = [
    "crates/lava_cli",
    "crates/lava_core"
]

[workspace.dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
convert_case = "0.6.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.108"
wasm-bindgen = "0.2.89"
lava_core = { path = "crates/lava_core" }
soda_sol = "0.0.9"